--- a/index.html
+++ b/index.html
@@ -20,13 +20,18 @@
 
     <main>
         <section class="intro">
+            <div class="intro-container">
             <img src="nursenar_profile_pic.jpeg" alt="Hatice Nursena Resüloğlu" class="profile-pic">
 
+            <div class="intro-text"> 
             <h2>Welcome!</h2>
 
              <p> Hello, I'm Hatice Nursena. (I prefer the name Nursena :)  I'm a senior studying Geomatics Engineering at Hacettepe University. 
                 This is my personal website where I share my background, projects, goals, and hobbies.
             </p>
+            </div>
+            </div>
+        </section>
 
     </main>
      <footer>
