--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
         <p> Geomatics Engineering student at Hacettepe University </p>
         <nav> 
             <ul><li><a href="index.html" class="active">Home</a></li>
-                <li><a href="background.html">Background</a></li>
+                <li><a href="aboutme.html">Who am I ? </a></li>
+                <li><a href="cv.html">CV</a></li>
                 <li><a href="projects.html">Projects</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="hobbies.html">Hobbies</a></li>
+                <li><a href="maps.html">Where is the Nurs? </a></li>
+                <li><a href="contact.html">Contact me</a></li>
              </ul>
         </nav>
     </header>
@@ -26,8 +29,8 @@
             <div class="intro-text"> 
             <h2>Welcome!</h2>
 
-             <p> Hello, I'm Hatice Nursena. (I prefer the name Nursena :)  I'm a senior studying Geomatics Engineering at Hacettepe University. 
-                This is my personal website where I share my background, projects, goals, and hobbies.
+             <p> Hello, I'm Hatice Nursena. ( (I prefer the name Nursena or Nurs :) )  I'm a senior studying Geomatics Engineering at Hacettepe University. 
+                This is my personal website where I share my background, projects,hobbies and etc. Discover the Nurs!
             </p>
             </div>
             </div>
