--- a/aboutme.html
+++ b/aboutme.html
@@ -14,7 +14,6 @@
             <ul><li><a href="index.html" class="active">Home</a></li>
                 <li><a href="aboutme.html">Who am I ? </a></li>
                 <li><a href="cv.html">CV</a></li>
-                <li><a href="projects.html">Projects</a></li>
                 <li><a href="hobbies.html">Hobbies</a></li>
                 <li><a href="maps.html">Where is the Nurs? </a></li>
                 <li><a href="contact.html">Contact me</a></li>
@@ -98,17 +97,14 @@ In general, I love eating, drinking, having fun with friends and family, traveli
       </div>
 
 </section>
- 
-          width="100%" height="152" frameBorder="0" allowfullscreen=""
-          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-</section>
+
 
     </section>
 
   </main>
 
   <footer>
-    <p>© 2025 Egemen Erken | All rights reserved.</p>
+    <p>© 2025 Hatice Nursena Resüloğlu | All rights reserved.</p>
   </footer>
 </body>
 </html>
