--- a/cv.html
+++ b/cv.html
@@ -22,74 +22,76 @@
 
   <main>
     <section class="card cv-actions">
-      <a class="btn" href="assets/HaticeNursenaResüloğlu.cv.pdf" download>PDF indir</a>
-      <button class="btn outline" onclick="window.print()">PDF olarak kaydet</button>
+      <a class="btn" href="assets/HaticeNursenaResüloğlu.cv.pdf" download>Download PDF</a>
+      <button class="btn outline" onclick="window.print()">Save as PDF</button>
     </section>
 
     <section class="card cv-page">
       <div class="cv-header-row">
         <div>
           <h2 class="cv-name">Hatice Nursena Resüloğlu</h2>
-          <p class="cv-tag">Geomatik (Harita) Mühendisliği Öğrencisi</p>
+          <p class="cv-tag">Geomatics Engineering Student</p>
         </div>
         <ul class="cv-contact">
-          <li><strong>Doğum:</strong> 21.07.2001</li>
-          <li><strong>Konum:</strong> Ankara, Türkiye</li>
-          <li><strong>E-posta:</strong> <a href="mailto:hnresl07@gmail.com">hnresl07@gmail.com</a></li>
-          <li><strong>Telefon:</strong> +90 551 550 23 69</li>
+          <li><strong>Birthdate</strong> 21.07.2001</li>
+          <li><strong>Location</strong> Ankara, Türkiye</li>
+          <li><strong>E-mail:</strong> <a href="mailto:hnresl07@gmail.com">hnresl07@gmail.com</a></li>
+          <li><strong>Phone:</strong> +90 551 550 23 69</li>
         </ul>
       </div>
 
       <div class="cv-section">
-        <h3>Özet</h3>
+        <h3> Summary </h3>
         <p>
-          Hacettepe Üniversitesi Geomatik Mühendisliği öğrencisiyim. Araştırmayı seven, teknolojiye meraklı ve alanına ilgili bir mühendis adayıyım. 
-          Eskişehir Deniz ALP LİHKAB, Eskişehir Büyükşehir Belediyesi, ESKİ (Bilgi İşlem Dairesi Coğrafi Bilgi Servisi) ve Ankara GEOGIS Mühendislik’te yaptığım stajlarla coğrafi bilgi sistemleri, 
-          harita üretimi ve 3B modelleme konularında deneyim kazandım. Edindiğim bilgi ve becerileri profesyonel hayata aktararak kariyerime güçlü bir başlangıç yapmayı hedefliyorum.
+          I'm a Geomatics Engineering student at Hacettepe University. I'm a prospective engineer who loves research, is passionate about technology, 
+          and is passionate about my field. Through internships at Eskişehir Deniz ALP LİHKAB, Eskişehir Metropolitan Municipality, 
+          ESKİ (Information Processing Department Geographic Information Service), and Ankara GEOGIS Engineering, 
+          I gained experience in geographic information systems, map production, and 3D modeling. 
+          I aim to make a strong start to my career by transferring the knowledge and skills I've acquired to my professional life.
         </p>
       </div>
 
       <div class="cv-section">
-        <h3>Deneyim</h3>
+        <h3>Experience</h3>
 
         <article class="cv-item">
           <div class="cv-item-head">
-            <h4>Stajyer Mühendis</h4>
+            <h4>Intern Engineer</h4>
             <span class="cv-meta">2023 · GEOGIS Mühendislik Müşavirlik A.Ş. · Ankara</span>
           </div>
           <ul class="cv-bullets">
-            <li>CBS ve haritalama süreçlerinde destek.</li>
-            <li>3B modelleme uygulamaları.</li>
+            <li>Support in GIS and mapping processes.</li>
+            <li>3D modeling applications.</li>
           </ul>
         </article>
 
         <article class="cv-item">
           <div class="cv-item-head">
-            <h4>Stajyer Mühendis</h4>
+            <h4>Intern Engineer</h4>
             <span class="cv-meta">2022 · ESKİ (CBS Servisi) · Eskişehir</span>
           </div>
           <ul class="cv-bullets">
-            <li>Kurumsal CBS süreçlerinin gözlemlenmesi ve veri düzenleme.</li>
+            <li>Observation of corporate GIS processes and data organization.</li>
           </ul>
         </article>
 
         <article class="cv-item">
           <div class="cv-item-head">
-            <h4>Stajyer Mühendis</h4>
+            <h4>Intern Engineer</h4>
             <span class="cv-meta">2021 · Deniz ALP LİHKAB · Eskişehir</span>
           </div>
           <ul class="cv-bullets">
-            <li>Harita üretiminde saha ve ofis desteği.</li>
+            <li>Field and office support in map production.</li>
           </ul>
         </article>
       </div>
 
       <div class="cv-section">
-        <h3>Eğitim</h3>
+        <h3>Education</h3>
         <article class="cv-item">
           <div class="cv-item-head">
-            <h4>Hacettepe Üniversitesi</h4>
-            <span class="cv-meta">2019 – Günümüz · Geomatik (Harita) Mühendisliği (İng) · Ankara</span>
+            <h4>Hacettepe University</h4>
+            <span class="cv-meta">2019 – Today · Geomatics Engineering (Eng) · Ankara</span>
           </div>
         </article>
         <article class="cv-item">
@@ -102,31 +104,31 @@
 
       <div class="cv-section cv-two">
         <div>
-          <h3>Teknik Yetenekler</h3>
+          <h3>Technical Skills</h3>
           <ul class="tags">
             <li>MS Office</li><li>Netcad</li><li>QGIS</li>
             <li>ArcGIS</li><li>MicroStation</li><li>Python</li>
           </ul>
         </div>
         <div>
-          <h3>Yetkinlikler</h3>
+          <h3>Competencies</h3>
           <ul class="cv-bullets">
-            <li>Müşteri odaklılık</li>
-            <li>Takım çalışması ve işbirliği</li>
-            <li>Hızlı öğrenme ve uyum</li>
+            <li>Customer focus</li>
+            <li>Teamwork and collaboration</li>
+            <li>Fast learning and adaptation</li>
           </ul>
         </div>
       </div>
 
       <div class="cv-section cv-two">
         <div>
-          <h3>Diller</h3>
+          <h3>Languages</h3>
           <ul class="cv-bullets">
-            <li>İngilizce</li>
+            <li>English</li>
           </ul>
         </div>
         <div>
-          <h3>Seminerler & Sertifikalar</h3>
+          <h3>Seminars and Certificates</h3>
           <ul class="cv-bullets">
             <li>2022 · CBS Kongresi · Ankara</li>
           </ul>
@@ -134,9 +136,9 @@
       </div>
 
       <div class="cv-section">
-        <h3>İlgi Alanları</h3>
+        <h3>Hobbies</h3>
         <ul class="tags">
-          <li>Örgü</li><li>Doğa yürüyüşü</li><li>Badminton</li>
+          <li>Crochet</li><li>Hiking</li><li>Badminton</li>
         </ul>
       </div>
     </section>
