--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <title>Hatice Nursena Resüloğlu | Webpage</title>
     <link rel="stylesheet" href="style.css">
 </head>
+ 
 <body>
+     <div id="flowers-container"></div>
     <header> 
         <h1> Hatice Nursena Resüloğlu</h1>
         <p> Geomatics Engineering student at Hacettepe University </p>
@@ -39,5 +41,29 @@
      <footer>
         <p>© 2025 Hatice Nursena Resüloğlu | All rights reserved.</p>
     </footer>
+    <script>
+  const flowers = ['🌸','🌼','🌺','🌷','🌻','💮'];
+  const container = document.getElementById('flowers-container');
+
+  // her 400 ms'de bir yeni çiçek oluştur
+  setInterval(() => {
+    const flower = document.createElement('span');
+    flower.classList.add('flower');
+    flower.innerText = flowers[Math.floor(Math.random() * flowers.length)];
+    
+    // rastgele konum ve hız
+    flower.style.left = Math.random() * 100 + 'vw';
+    flower.style.animationDuration = 3 + Math.random() * 5 + 's'; // 3–8 sn
+    flower.style.fontSize = 16 + Math.random() * 24 + 'px';
+    
+    container.appendChild(flower);
+
+    // belirli süre sonra DOM'dan kaldır
+    setTimeout(() => {
+      flower.remove();
+    }, 8000);
+  }, 400);
+</script>
+
 </body>
 </html>
