--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
  
 <body>
-     <div id="flowers-container"></div>
+ 
+  <div id="flowers-container"></div>
     <header> 
         <h1> Hatice Nursena Resüloğlu</h1>
         <p> Geomatics Engineering student at Hacettepe University </p>
@@ -41,28 +42,35 @@
      <footer>
         <p>© 2025 Hatice Nursena Resüloğlu | All rights reserved.</p>
     </footer>
-    <script>
-  const flowers = ['🌸','🌼','🌺','🌷','🌻','💮'];
-  const container = document.getElementById('flowers-container');
 
-  
-  setInterval(() => {
-    const flower = document.createElement('span');
-    flower.classList.add('flower');
-    flower.innerText = flowers[Math.floor(Math.random() * flowers.length)];
     
-  
-    flower.style.left = Math.random() * 100 + 'vw';
-    flower.style.animationDuration = 3 + Math.random() * 5 + 's'; 
-    flower.style.fontSize = 16 + Math.random() * 24 + 'px';
-    
-    container.appendChild(flower);
+     <script>
+    // Basit “falling flowers” üreticisi
+    const container = document.getElementById('flowers-container');
+    const emojis = ['🌸','🌼','🌺','🌷','🌻','💮'];
 
-    setTimeout(() => {
-      flower.remove();
-    }, 8000);
-  }, 400);
-</script>
+    function spawnFlower() {
+      const f = document.createElement('span');
+      f.className = 'flower';
+      f.textContent = emojis[Math.floor(Math.random() * emojis.length)];
+
+      // rastgele başlangıç konumu/özellik
+      f.style.left = Math.random() * 100 + 'vw';
+      f.style.fontSize = (16 + Math.random() * 28) + 'px';
+      f.style.setProperty('--dur', (3 + Math.random() * 5) + 's');     // düşme süresi
+      f.style.setProperty('--sx', (Math.random() * 2 - 1) * 30 + 'px'); // sağa-sola salınım
+
+      container.appendChild(f);
+      // animasyon bitince DOM'dan sil
+      setTimeout(() => f.remove(), 8000);
+    }
+
+    // her 300ms’de bir yeni çiçek
+    const timer = setInterval(spawnFlower, 300);
+
+    // (Opsiyonel) 10 sn sonra durdurmak istersen:
+    // setTimeout(() => clearInterval(timer), 10000);
+  </script>
 
 </body>
 </html>
