--- a/maps.html
+++ b/maps.html
@@ -44,14 +44,13 @@
     <h1>Hatice Nursena Resüloğlu</h1>
     <p>Geomatics Engineering student at Hacettepe University</p>
     <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="cv.html">CV</a></li>
-        <li><a href="hobbies.html">Hobbies</a></li>
-        <li><a class="active" href="map.html">Where is the Nurs?</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
+     <ul><li><a href="index.html" class="active">Home</a></li>
+                <li><a href="aboutme.html">Who am I ? </a></li>
+                <li><a href="cv.html">CV</a></li>
+                <li><a href="hobbies.html">Hobbies</a></li>
+                <li><a href="maps.html">Where is the Nurs? </a></li>
+                <li><a href="contact.html">Contact me</a></li>
+             </ul>
     </nav>
   </header>
 
