--- a/contact.html
+++ b/contact.html
@@ -97,7 +97,7 @@
   <main>
     <section class="contact-section">
       <h2>Contact Me</h2>
-      <p>Benimle iletişime geçmek istersen aşağıdaki platformlardan ulaşabilirsin 💜</p>
+      <p>If you want to contact me, you can reach me through the following platforms.💜</p>
 
       <div class="contact-links">
         <!-- Gmail -->
