--- a/cv.html
+++ b/cv.html
@@ -147,5 +147,7 @@
   <footer>
     <p>© 2025 Hatice Nursena Resüloğlu | All rights reserved.</p>
   </footer>
+  <script src="main.js"></script>
+
 </body>
 </html>
