--- a/aboutme.html
+++ b/aboutme.html
@@ -107,5 +107,7 @@ In general, I love eating, drinking, having fun with friends and family, traveli
   <footer>
     <p>© 2025 Hatice Nursena Resüloğlu | All rights reserved.</p>
   </footer>
+  <script src="main.js"></script>
+
 </body>
 </html>
