--- a/contact.html
+++ b/contact.html
@@ -131,5 +131,7 @@
   <footer>
     <p>© 2025 Hatice Nursena Resüloğlu | All rights reserved.</p>
   </footer>
+  <script src="main.js"></script>
+
 </body>
 </html>
