--- a/hobbies.html
+++ b/hobbies.html
@@ -69,5 +69,7 @@
     <p>© 2025 Hatice Nursena Resüloğlu | All rights reserved.</p>
   </footer>
 
+  <script src="main.js"></script>
+
 </body>
 </html>
