--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
     // (opsiyonel) 12 sn sonra dursun
     // setTimeout(() => clearInterval(timer), 12000);
   </script>
+<script src="main.js"></script>
 
 </body>
 </html>
